fix reset nav bar

--- a/templates/confirm-password.html
+++ b/templates/confirm-password.html
@@ -9,10 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="/profile">Profile</a>
+        <!-- <a class="nav-item nav-link" href="/profile">Profile</a>
         <a class="nav-item nav-link" href="/livechat">Livechat</a>
         <a class="nav-item nav-link" href="/logout">Logout</a>
-        <a class="nav-item nav-link" href="/delete">Deleteaccount</a>
+        <a class="nav-item nav-link" href="/delete">Deleteaccount</a> -->
         
         <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">&#128525;</a>
       </div>
